# dx12-radiance-cascades

./: .gitignore  Application.cpp  Application.h  Bootstrap.ps1  CMakeLists.txt  Camera.h  CascadeAccumulation.h  CascadeAccumulation.hlsl  CascadeTracing.h  CascadeTracing.hlsl  Common.hlsl  DebugCascades.ps.h  DebugCascades.ps.hlsl  DebugCascades.vs.h  DebugCascades.vs.hlsl  Device.cpp  Device.h  Drawing.ps.h  Drawing.ps.hlsl  Drawing.vs.h  Drawing.vs.hlsl  LICENSE  Model.cpp  Model.h  README  RadianceCascades.cpp  RadianceCascades.h  Raytracing.h  Raytracing.hlsl  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shared.h  application.cpp  application.h  main.cpp  shaders.cmake  vcpkg.json
headers/: Application.h  Camera.h  Model.h  RadianceCascades.h  Shared.h
models/: Sphere.glb
shaders/: DebugCascades.ps.hlsl  DebugCascades.vs.hlsl  Drawing.ps.hlsl
sources/: Application.cpp  Model.cpp
